# carde

./: .gitignore  README.md  pyproject.toml
data/: README.md
docs/: README.md
docs/notebooks/: classic_ml_segmentation.ipynb  hyperparameter_optimization.ipynb  optimize_unet_sheduler_3.db  preprocess_images.ipynb  process_image_folder.ipynb  results.csv  run_unet_experiments.ipynb  run_unet_experiments_mve.ipynb  tile_images.ipynb  uncertainty_estimation.ipynb
src/carde/: __init__.py  dataset.py  evalmetrics.py  image_processing.py  io.py  unet.py
tests/: test_image_processing.py  test_io.py
